--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   Sample Text
   
-  <a href="/week 1/first_website/week 1 code-first.html">Load Other Page</a>
+  <a href="./week 1/first_website/week 1 code-first.html">Load Other Page</a>
   
 </body>
 
