--- a/news.html
+++ b/news.html
@@ -2,6 +2,7 @@
 
 <head>
   <link rel="stylesheet" href="cssnewspage.css">
+  <link rel="stylesheet" href="css.bootstrap.css">
   <title>News</title>
 </head>
 
@@ -9,19 +10,46 @@
   <div>
     <header>
       <ul>
-        <li class='nav'><a href="#">Home</a></li>
-        <li class='nav'><a href="#">News</a></li>
+        <li class='nav'><a href="femfileshome.html">Home</a></li>
+        <li class='nav'><a href="news.html">News</a></li>
         <li class='nav'><a href="#">Get Involved</a></li>
         <li class='nav'><a href="#">Gallery</a></li>
         <li class='nav'><a href="#">Contact Us</a></li>
       </ul>
       </header>
   </div>
-<div>
-  <h1 class="title">News</h1>
-  <h2 class="mission">The latest news regarding women's rights and issues, both in St. Andrews and around the world</h2>
-<div class="newsone">
-    <img src="diornews.jpeg">
-    <h1>Criticism's of Dior's Latest Campaign</h1>
-    <h2>High-end fashion label Dior faces backlash at use of traditional Mexican clothing in newest clothing line, modeled by Jennifer Lawrence</h2>
+  <div>
+    <h1 class="title">News</h1>
+    <h2 class="mission">The latest news regarding women's rights and issues, both in St. Andrews and around the world</h2>
+  <div class="newsone">
+      <img src="diornews.jpeg" alt="Dior" class="images">
+      <h1 class="newsheadlines">Criticism's of Dior's Latest Campaign</h1>
+      <h2 class="bodytext">High-end fashion label Dior faces backlash at use of traditional Mexican clothing in newest clothing line, modeled by Jennifer Lawrence</h2>
+    </div>
+  <div class="newstwo">
+        <img src="ocasio-cortez.jpeg" alt="Cortez" class="images">
+        <h1 class="newsheadlines">Ocasio-Cortez becomes New York congresswomen in historic election</h1>
+        <h2 class="bodytext">Alexandria Ocasio-Cortez, who just last year was bartending to make ends meet, was elected last week to the House of Representatives</h2>
+      </div>
+  <div class="newsthree">
+            <img src="ruumi.jpeg" alt="Cortez" class="images">
+            <h1 class="newsheadlines">Muna Ruumi: Britain's youngest record-label mogul</h1>
+            <h2 class="bodytext">19-year old girl from Birmingham, starts her own record label followed the increased popularity of grime and hip-hop in her area</h2>
+          </div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4">
+        <img src="diornews.jpeg" alt="Dior" class="images">
+        <h1 class="newsheadlines">Criticism's of Dior's Latest Campaign</h1>
+    </div>
+    <div class="col-sm-4">
+        <img src="ocasio-cortez.jpeg" alt="Cortez" class="images">
+        <h2 class="newsheadlines">Ocasio-Cortez becomes New York congresswomen in historic election</h1>
+    </div>
+    <div class="col-sm-4">
+        <img src="ruumi.jpeg" alt="Cortez" class="images">
+        <h3 class="newsheadlines">Muna Ruumi: Britain's youngest record-label mogul</h1>
+    </div>
   </div>
+</div>
