--- a/news.html
+++ b/news.html
@@ -46,7 +46,7 @@
     </div>
     <div class="col-sm-4">
         <img src="ocasio-cortez.jpeg" alt="Cortez" class="images">
-        <h2 class="newsheadlines">Ocasio-Cortez becomes New York congresswomen in historic election</h1>
+        <h2 class="newsheadlines">HELLO Ocasio-Cortez becomes New York congresswomen in historic election</h1>
     </div>
     <div class="col-sm-4">
         <img src="ruumi.jpeg" alt="Cortez" class="images">
