Minor edits after class
added logo to header
changed size of WOW image

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <div>
     <header>
       <ul>
+        <li> <img class='navimage' src="logohomepage.jpg"></li>
         <li class='nav'><a href="femfileshome.html">Home</a></li>
         <li class='nav'><a href="news.html">News</a></li>
         <li class='nav'><a href="#">Get Involved</a></li>
@@ -20,7 +21,7 @@
   </div>
   <div class='jumbotron'>
     <div class="row">
-      <div class="col-sm-8" <h1 class="title">The Femme Files</h1>
+      <div class="col-sm-8" <h1 class="title">The <a id="femme">Femme</a>Files</h1>
       </div>
     </div>
   </div>
@@ -32,7 +33,7 @@
   <div class="Wow">
     <h1>WoW</h1>
     <h2>Woman of the Week</h2>
-    <img src="WoWimage.jpeg">
+    <img class="wowimage" src="WoWimage.jpeg">
     <h3 class="wowtitle">Scarlett Curtis</h3>
     <p class="wowblurb">Scarlett Curtis, this week's WoW is a contributing editor and columnist of The Sunday Times Style Magazine. The list of major publications she has written for is expansive including The Guardian, GLAMOUR, Elle, InStyle, The
       Telegraph, Tatler and Vogue, but this is not all that is impressive about Curtis. In 2017, Scarlett founded The Pink Protest with Grace Campbell and Alice Skinner; The Pink Protest is dedicated to engaging in action and supporting the
