--- a/news.html
+++ b/news.html
@@ -10,7 +10,7 @@
   <div>
     <header>
       <ul>
-        <li class='nav'><a href="femfileshome.html">Home</a></li>
+        <li class='nav'><a href="index.html">Home</a></li>
         <li class='nav'><a href="news.html">News</a></li>
         <li class='nav'><a href="#">Get Involved</a></li>
         <li class='nav'><a href="#">Gallery</a></li>
@@ -19,12 +19,32 @@
     </header>
   </div>
   <div>
-    <h1 class="title">News</h1>
-    <h2 class="mission">The latest news regarding women's rights and issues, both in St. Andrews and around the world</h2>
+    <h1 class="title">International News</h1>
+    <h2 class="mission">The latest news regarding women's rights and issues around the world. Click the images below for more information!</h2>
       <div class="newsone">
-        <img src="diornews.jpeg" alt="Dior" class="images">
+        <a href="https://www.buzzfeed.com/ryanschocket2/jennifer-lawrence-is-facing-backlash-for-her-new-fashion"><img src="diornews.jpeg" alt="Dior" class="images"></a>
         <h1 class="newsheadlines">Criticism's of Dior's Latest Campaign</h1>
         <h2 class="bodytext">High-end fashion label Dior faces backlash at use of traditional Mexican clothing in newest clothing line, modeled by Jennifer Lawrence</h2>
+      </div>
+      <div class="newstwo">
+        <a href="https://www.buzzfeednews.com/article/mollyhensleyclancy/two-women-in-their-20s-could-be-elected-to-congress-tuesday"><img src="ocasio-cortez.jpeg" alt="Cortez" class="images"></a>
+        <h1 class="newsheadlines">Ocasio-Cortez becomes New York congresswomen in historic election</h1>
+        <h2 class="bodytext">Alexandria Ocasio-Cortez, who just last year was bartending to make ends meet, was elected last week to the House of Representatives</h2>
+      </div>
+      <div class="newsthree">
+            <a href="https://www.buzzfeed.com/ikrd/teen-record-label-birmingham-muna-ruumi"><img src="ruumi.jpeg" alt="Cortez" class="images"></a>
+            <h1 class="newsheadlines">Muna Ruumi: Britain's youngest record-label mogul</h1>
+            <h2 class="bodytext">19-year old girl from Birmingham, starts her own record label followed the increased popularity of grime and hip-hop in her area</h2>
+      </div>
+  </div>
+
+  <div>
+    <h1 class="title">St. Andrews News</h1>
+    <h2 class="mission">The latest news regarding women's rights and issues, right here in St. Andrews</h2>
+      <div class="newsone">
+        <a href="https://www.facebook.com/events/2220464008198561/"><img src="reclaimthenight.jpeg" alt="Dior" class="images"></a>
+        <h1 class="newsheadlines">Reclaim the Night March</h1>
+        <h2 class="bodytext">Despite inclimate weather, the Reclaim the Night march is set to go off without a hitch</h2>
       </div>
       <div class="newstwo">
         <img src="ocasio-cortez.jpeg" alt="Cortez" class="images">
@@ -37,20 +57,3 @@
             <h2 class="bodytext">19-year old girl from Birmingham, starts her own record label followed the increased popularity of grime and hip-hop in her area</h2>
       </div>
   </div>
-
-<div class="container">
-  <div class="row">
-    <div class="col-sm-4">
-        <img src="diornews.jpeg" alt="Dior" class="images">
-        <h1 class="newsheadlines">Criticism's of Dior's Latest Campaign</h1>
-    </div>
-    <div class="col-sm-4">
-        <img src="ocasio-cortez.jpeg" alt="Cortez" class="images">
-        <h2 class="newsheadlines">Ocasio-Cortez becomes New York congresswomen in historic election</h1>
-    </div>
-    <div class="col-sm-4">
-        <img src="ruumi.jpeg" alt="Cortez" class="images">
-        <h3 class="newsheadlines">Muna Ruumi: Britain's youngest record-label mogul</h1>
-    </div>
-  </div>
-</div>
