--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <ul>
         <li> <img class='navimage' src="logohomepage.jpg"></li>
-        <li class='nav'><a href="femfileshome.html">Home</a></li>
+        <li class='nav'><a href="index.html">Home</a></li>
         <li class='nav'><a href="news.html">News</a></li>
         <li class='nav'><a href="#">Get Involved</a></li>
         <li class='nav'><a href="#">Gallery</a></li>
