--- a/Get_involved/Getinvolved.html
+++ b/Get_involved/Getinvolved.html
@@ -3,6 +3,8 @@
 <head>
   <link rel="stylesheet" href="cssgetinvolved.css">
   <link rel="stylesheet" href="css/bootstrap.css">
+  <script src="getinvolved_java.js"></script>
+  <script src="js/bootstrap.min.js"></script>
   <title>Get Involved</title>
 </head>
 
@@ -19,7 +21,7 @@
     </header>
 
     <div>
-      <h1 class="title">Get Involved</h1>
+      <h1 class="title">Get Involved NOW</h1>
       <h2 class="subtitle">Find out how you can get involved in and outside of St Andrews!</h2>
     </div>
 
@@ -27,24 +29,42 @@
       <div class="row">
         <div class="col-sm-4">
           <img src="heforshe_logo.jpg" class="img-fluid" alt="HeForShe">
+          <blockquote>
+            <p><b><span class="pinktext">HeForShe</span></b> is a solidarity campaign for the davancement of gender equality. It was initiated by the UN. Read a recent article about HeForShe in St Andrews in the Saint or visit their facebook page @HeForSheStAndrews to find out more.</p>
+          </blockquote>
         </div>
         <div class="col-sm-4">
           <img src="womeninwork_logo.jpg" class="img-fluid" alt="Women in work">
+          <blockquote>
+            <p><b><span class="pinktext">Women in Work</span></b> Read a recent article about HeForShe in St Andrews in the Saint or visit their facebook page @HeForSheStAndrews to find out more.</p>
+          </blockquote>
         </div>
         <div class="col-sm-4">
           <img src="womenforwomeninternational_logo.jpg" class="img-fluid" alt="Women for women international">
+          <blockquote>
+            <p><b><span class="pinktext">Women for Women International</span></b> is a solidarity campaign for the davancement of gender equality. It was initiated by the UN. Read a recent article about HeForShe in St Andrews in the Saint or visit their facebook page @HeForSheStAndrews to find out more.</p>
+          </blockquote>
         </div>
       </div>
 
     <div class="row">
       <div class="col-sm-4">
         <img src="herchoice_logo.jpg" class="img-fluid" alt="Her Choice">
+        <blockquote>
+          <p><b><span class="pinktext">Her Choice</span></b> is a solidarity campaign for the davancement of gender equality. It was initiated by the UN. Read a recent article about HeForShe in St Andrews in the Saint or visit their facebook page @HeForSheStAndrews to find out more.</p>
+        </blockquote>
       </div>
       <div class="col-sm-4">
         <img src="womenincomputerscience_logo.jpg" class="img-fluid" alt="Women in Computer Science">
+        <blockquote>
+          <p><b><span class="pinktext">Women in Computer Science</span></b> is a solidarity campaign for the davancement of gender equality. It was initiated by the UN. Read a recent article about HeForShe in St Andrews in the Saint or visit their facebook page @HeForSheStAndrews to find out more.</p>
+        </blockquote>
       </div>
       <div class="col-sm-4">
         <img src="feministsociety_logo.jpg" class="img-fluid" alt="Feminist Society">
+        <blockquote>
+          <p><b><span class="pinktext">Feminist Society</span></b> is a solidarity campaign for the davancement of gender equality. It was initiated by the UN. Read a recent article about HeForShe in St Andrews in the Saint or visit their facebook page @HeForSheStAndrews to find out more.</p>
+        </blockquote>
       </div>
       </div>
     </div>
