--- a/news.html
+++ b/news.html
@@ -47,9 +47,9 @@
         <h2 class="bodytext">Despite inclimate weather, the Reclaim the Night march is set to go off without a hitch</h2>
       </div>
       <div class="newstwo">
-        <img src="ocasio-cortez.jpeg" alt="Cortez" class="images">
-        <h1 class="newsheadlines">Ocasio-Cortez becomes New York congresswomen in historic election</h1>
-        <h2 class="bodytext">Alexandria Ocasio-Cortez, who just last year was bartending to make ends meet, was elected last week to the House of Representatives</h2>
+        <a href="https://www.facebook.com/events/576501212806781/"><img src="yoga.jpg" alt="Cortez" class="images"></a>
+        <h1 class="newsheadlines">Yoga Society offers stress-relief focused yoga ahead of exams</h1>
+        <h2 class="bodytext">The St. Andrews Yoga Society will be holding an open yoga session, specifically targetted for stress relief, to reduce anxiety before exams. Head to the union on Decemeber 5th!</h2>
       </div>
       <div class="newsthree">
             <img src="ruumi.jpeg" alt="Cortez" class="images">
