--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   </div>
   <div class='jumbotron'>
     <div class="row">
-      <div class="col-sm-8" <h1 class="title">The <a id="femme">Femme</a>Files</h1>
+      <div class="col-sm-8">
+        <h1>The <b><span class="pinktext">Femme</span></b>Files</h1>
       </div>
     </div>
   </div>
@@ -31,7 +32,7 @@
       involved in the motion for change within St Andrews in our events section.</h2>
   </div>
   <div class="Wow">
-    <h1>WoW</h1>
+    <h1 class="Wow">WoW</h1>
     <h2>Woman of the Week</h2>
     <img class="wowimage" src="WoWimage.jpeg">
     <h3 class="wowtitle">Scarlett Curtis</h3>
