--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       involved in the motion for change within St Andrews in our events section.</h2>
   </div>
   <div class="Wow">
-    <h1 class="Wow">WoW</h1>
-    <h2>Woman of the Week</h2>
+    <h1 class="Title2">WoW</h1>
+    <h2 class="Title3">Woman of the Week</h2>
     <img class="wowimage" src="WoWimage.jpeg">
     <h3 class="wowtitle">Scarlett Curtis</h3>
     <p class="wowblurb">Scarlett Curtis, this week's WoW is a contributing editor and columnist of The Sunday Times Style Magazine. The list of major publications she has written for is expansive including The Guardian, GLAMOUR, Elle, InStyle, The
