--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </div>
   <div class="Wow">
     <h1 class="Wow">WoW</h1>
-    <h2>Woman of the Week</h2>
+    <h2 class="wowtitle">Woman of the Week</h2>
     <img class="wowimage" src="WoWimage.jpeg">
     <h3 class="wowtitle">Scarlett Curtis</h3>
     <p class="wowblurb">Scarlett Curtis, this week's WoW is a contributing editor and columnist of The Sunday Times Style Magazine. The list of major publications she has written for is expansive including The Guardian, GLAMOUR, Elle, InStyle, The
@@ -53,11 +53,11 @@
         <li class='wowlist'><a href="https://www.girlup.org/#sthash.zjuHPKbU.dpbs">www.girlup.org</a></li>
       </ul>
     </p>
-    <h4 class="polltext">Did you like this week's WoW?</h4>
+    <h4 class="polltext">Who should our next week's WoW be?</h4>
     <ul>
 
-      <li class="btn-lg"><button>Yes</button></li>
-      <li class="btn-lg"><button>No</button></li>
+      <li class="btn-lg"><button>Michelle Obama</button></li>
+      <li class="btn-lg"><button>Malala Yousafzai</button></li>
     </ul>
 
   </div>
