--- a/news.html
+++ b/news.html
@@ -52,8 +52,8 @@
         <h2 class="bodytext">The St. Andrews Yoga Society will be holding an open yoga session, specifically targetted for stress relief, to reduce anxiety before exams. Head to the union on Decemeber 5th!</h2>
       </div>
       <div class="newsthree">
-            <img src="ruumi.jpeg" alt="Cortez" class="images">
-            <h1 class="newsheadlines">Muna Ruumi: Britain's youngest record-label mogul</h1>
+            <a href="https://news.st-andrews.ac.uk/archive/new-st-andrews-halls-to-be-named-after-female-pioneers/"><img src="newhalls.jpg" alt="Cortez" class="images"></a>
+            <h1 class="newsheadlines">New halls named after famous female alumni</h1>
             <h2 class="bodytext">19-year old girl from Birmingham, starts her own record label followed the increased popularity of grime and hip-hop in her area</h2>
       </div>
   </div>
