--- a/Get_involved/Getinvolved.html
+++ b/Get_involved/Getinvolved.html
@@ -11,7 +11,7 @@
 <body>
   <div>
     <header>
-      <ul>
+      <ul class="nav">
         <li class='nav'><a href="femfileshome.html">Home</a></li>
         <li class='nav'><a href="news.html">News</a></li>
         <li class='nav'><a href="#">Get Involved</a></li>
