--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div>
     <header>
-      <ul>
+      <ul class="navbar">
         <li> <img class='navimage' src="logohomepage.jpg"></li>
         <li class='nav'><a href="index.html">Home</a></li>
         <li class='nav'><a href="news.html">News</a></li>
@@ -28,14 +28,13 @@
   </div>
 
   <div>
-    <h2 class="mission">Our Mission: We are a St Andrews based initiative committed to empowering women. We hope to achieve this by informing our readers of current affairs pertaining to women's rights in our news forum and promoting ways to get
+    <h2 class="mission"><b><span class="pinktext">Our Mission:</span></b>We are a St Andrews based initiative committed to empowering women. We hope to achieve this by informing our readers of current affairs pertaining to women's rights in our news forum and promoting ways to get
       involved in the motion for change within St Andrews in our events section.</h2>
   </div>
   <div class="Wow">
-    <h1 class="Title2">WoW</h1>
-    <h2 class="Title3">Woman of the Week</h2>
+    <h1 class="Title2"><b><span class="greytext">WoW: </span></b><b><span class="greytext">W</span></b>oman <b><span class="greytext">o</span></b>f the <b><span class="greytext">W</span></b>eek</h1>
     <img class="wowimage" src="WoWimage.jpeg">
-    <h3 class="wowtitle">Scarlett Curtis</h3>
+    <h2 class="wowtitle"><b>Scarlett Curtis</b></h2>
     <p class="wowblurb">Scarlett Curtis, this week's WoW is a contributing editor and columnist of The Sunday Times Style Magazine. The list of major publications she has written for is expansive including The Guardian, GLAMOUR, Elle, InStyle, The
       Telegraph, Tatler and Vogue, but this is not all that is impressive about Curtis. In 2017, Scarlett founded The Pink Protest with Grace Campbell and Alice Skinner; The Pink Protest is dedicated to engaging in action and supporting the
       community of activists it fosters which grows each day. It has started up the Free Periods movement which aims to end period poverty in the UK as well as providing information about period poverty, and promoting donation forums supporting
@@ -64,9 +63,9 @@
 
   <div class="contact">
     <h1>Contact Us</h1>
-    <p>Email us at thefemmefiles@gmail.com</p>
+    <p class="contactp">Email us at <b><span class="pinktext">thefemmefiles@gmail.com</span></b></p>
     <h1>Follow Us</h1>
-    <p>instagram, twitter, FB</p>
+    <p class="contactp">instagram, twitter, FB</p>
     <h1>Subscribe to our newsletter!</h1>
     <input type="email" placeholder="Your Email">
     <input type="Submit">
