--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div class="Wow">
     <h1 class="Title2"><b><span class="greytext">WoW: </span></b><b><span class="greytext">W</span></b>oman <b><span class="greytext">o</span></b>f the <b><span class="greytext">W</span></b>eek</h1>
     <img class="wowimage" src="WoWimage.jpeg">
-    <h2 class="wowtitle"><b>Scarlett Curtis</b></h2>
+    <h1 class="wowtitle"><b>Scarlett Curtis</b></h1>
     <p class="wowblurb">Scarlett Curtis, this week's WoW is a contributing editor and columnist of The Sunday Times Style Magazine. The list of major publications she has written for is expansive including The Guardian, GLAMOUR, Elle, InStyle, The
       Telegraph, Tatler and Vogue, but this is not all that is impressive about Curtis. In 2017, Scarlett founded The Pink Protest with Grace Campbell and Alice Skinner; The Pink Protest is dedicated to engaging in action and supporting the
       community of activists it fosters which grows each day. It has started up the Free Periods movement which aims to end period poverty in the UK as well as providing information about period poverty, and promoting donation forums supporting
@@ -52,7 +52,7 @@
         <li class='wowlist'><a href="https://www.girlup.org/#sthash.zjuHPKbU.dpbs">www.girlup.org</a></li>
       </ul>
     </p>
-    <h4 class="polltext">Did you like this week's WoW?</h4>
+    <h4 class="polltext">Vote for next week's WoW!</h4>
     <ul>
 
       <li class="btn-lg"><button>Yes</button></li>
