--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE>
 
 <head>
-  <link rel="stylesheet" href="csshomepage.css">
   <link rel="stylesheet" href="css/bootstrap.css">
-
+  <link rel="stylesheet" href="csshomepage.css">
 </head>
 
 <body>
@@ -55,8 +54,8 @@
     <h4 class="polltext">Who should our next week's WoW be?</h4>
     <ul>
 
-      <li class="btn-lg"><button>Michelle Obama</button></li>
-      <li class="btn-lg"><button>Malala Yousafzai</button></li>
+      <li><button class="btn-lg">Michelle Obama</button></li>
+      <li><button class="btn-lg">Malala Yousafzai</button></li>
     </ul>
 
   </div>
