--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </div>
   <div class="Wow">
     <h1 class="Title2"><b><span class="greytext">WoW: </span></b><b><span class="greytext">W</span></b>oman <b><span class="greytext">o</span></b>f the <b><span class="greytext">W</span></b>eek</h1>
-    <img class="wowimage" src="WoWimage.jpeg">
+    <img class="img-circle" src="WoWimage.jpeg">
     <h1 class="wowtitle"><b>Scarlett Curtis</b></h1>
     <p class="wowblurb">Scarlett Curtis, this week's WoW is a contributing editor and columnist of The Sunday Times Style Magazine. The list of major publications she has written for is expansive including The Guardian, GLAMOUR, Elle, InStyle, The
       Telegraph, Tatler and Vogue, but this is not all that is impressive about Curtis. In 2017, Scarlett founded The Pink Protest with Grace Campbell and Alice Skinner; The Pink Protest is dedicated to engaging in action and supporting the
@@ -60,13 +60,33 @@
 
   </div>
 
-  <div class="contact">
-    <h1>Contact Us</h1>
-    <p class="contactp">Email us at <b><span class="pinktext">thefemmefiles@gmail.com</span></b></p>
-    <h1>Follow Us</h1>
-    <p class="contactp">instagram, twitter, FB</p>
-    <h1>Subscribe to our newsletter!</h1>
-    <input type="email" placeholder="Your Email">
-    <input type="Submit">
-  </div>
+
+<div class='jumbotron2'>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-8">
+        <h1>Contact Us!</h1>
+        <p class="contactp">Email us at <b><span class="pinktext">thefemmefiles@gmail.com</span></b></p>
+        <h1>Follow Us</h1>
+        <p class="contactp">instagram, twitter, FB</p>
+        <h1>Subscribe to our newsletter!</h1>
+        <input type="email" placeholder="Your Email">
+        <input type="Submit">
+      </div>
+      <div class="col-sm-4">
+        <img class="img-responsive" src='logo.jpeg'>
+      </div>
+</div>
+</div>
+</div>
 </body>
+
+<!--div class="contact">
+  <h1>Contact Us</h1>
+  <p class="contactp">Email us at <b><span class="pinktext">thefemmefiles@gmail.com</span></b></p>
+  <h1>Follow Us</h1>
+  <p class="contactp">instagram, twitter, FB</p>
+  <h1>Subscribe to our newsletter!</h1>
+  <input type="email" placeholder="Your Email">
+  <input type="Submit">
+</div-->
