--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div>
     <header>
       <ul class="navbar">
-        <li> <img class='navimage' src="logohomepage.jpg"></li>
+        <li> <img class='navimage' src="logo.jpg"></li>
         <li class='nav'><a href="index.html">Home</a></li>
         <li class='nav'><a href="news.html">News</a></li>
         <li class='nav'><a href="#">Get Involved</a></li>
