--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class='jumbotron'>
     <div class="row">
       <div class="col-sm-8">
-        <h1>The <b><span class="pinktext">Femme</span></b>Files</h1>
+        <h1 class="title1">The <b><span class="pinktext">Femme</span></b> Files</h1>
       </div>
     </div>
   </div>
@@ -67,8 +67,7 @@
       <div class="col-sm-8">
         <h1>Contact Us!</h1>
         <p class="contactp">Email us at <b><span class="pinktext">thefemmefiles@gmail.com</span></b></p>
-        <h1>Follow Us</h1>
-        <p class="contactp">instagram, twitter, FB</p>
+
         <h1>Subscribe to our newsletter!</h1>
         <input type="email" placeholder="Your Email">
         <input type="Submit">
@@ -76,6 +75,13 @@
       <div class="col-sm-4">
         <img class="img-responsive" src='logo.jpeg'>
       </div>
+      <div class='social-buttons'>
+        <button class="btn btn-lg btn-twitter">Twitter</button>
+        <button class="btn btn-lg btn-facebook">Facebook</button>
+        <button class="btn btn-lg btn-pinterest">Pinterest</button>
+        </div>
+
+</div>
 </div>
 </div>
 </div>
