--- a/news.html
+++ b/news.html
@@ -1,8 +1,8 @@
 <!DOCTYPE>
 
 <head>
+  <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="cssnewspage.css">
-  <link rel="stylesheet" href="css.bootstrap.css">
   <title>News</title>
 </head>
 
@@ -10,6 +10,7 @@
   <div>
     <header>
       <ul>
+        <li> <img class='navimage' src="logo.jpeg"></li>
         <li class='nav'><a href="index.html">Home</a></li>
         <li class='nav'><a href="news.html">News</a></li>
         <li class='nav'><a href="#">Get Involved</a></li>
