added navbar and bottom contact us info

--- a/Get_involved/Getinvolved.html
+++ b/Get_involved/Getinvolved.html
@@ -11,59 +11,98 @@
 <body>
   <div>
     <header>
-      <ul>
-        <li class='nav'><a href="femfileshome.html">Home</a></li>
-        <li class='nav'><a href="news.html">News</a></li>
-        <li class='nav'><a href="#">Get Involved</a></li>
-        <li class='nav'><a href="#">Gallery</a></li>
-        <li class='nav'><a href="#">Contact Us</a></li>
-      </ul>
+      <nav class="navbar navbar-expand-lg">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <!--- <li><a href="#" class="pull-left"><img class="navimage" src="logo.jpeg" style="display: inline-block;"></a></li>-->
+            <!--<li><img class='navimage' src="logo.jpeg"></li>-->
+            <li><a href="#"><b><span class="greytext">Home</span></b></a></li>
+            <li><a href="#"><b><span class="greytext">News</span></b></a></li>
+            <li><a href="#"><b><span class="greytext">Get involved</span></b></a></li>
+            <li><a href="#"><b><span class="greytext">Gallery</span></b></a></li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0 type=" submit">Search</button>
+          </form>
+        </div>
+      </nav>
     </header>
+  </div>
 
-    <div>
-      <h1 class="title">Get Involved NOW</h1>
-      <h2 class="subtitle">Find out how you can get involved in and outside of St Andrews!</h2>
+  <div>
+    <h1 class="title"><b>Get Involved NOW</b></h1>
+    <h2 class="subtitle">Find out how you can get involved in and outside of St Andrews!</h2>
+  </div>
+
+  <div class="container-fluid">
+    <div class="row1">
+      <div class="col-sm-4">
+        <img src="heforshe_logo.jpg" class="img-fluid" alt="HeForShe">
+        <blockquote>
+          <p><b><span class="pinktext">HeForShe</span></b> is a solidarity campaign for the davancement of gender equality. It was initiated by the UN. Read a recent article about HeForShe in St Andrews in the Saint or visit their facebook page
+            @HeForSheStAndrews to find out more.</p>
+        </blockquote>
+      </div>
+      <div class="col-sm-4">
+        <img src="womeninwork_logo.jpg" class="img-fluid" alt="Women in work">
+        <blockquote>
+          <p><b><span class="pinktext">Women in Work</span></b> Read a recent article about HeForShe in St Andrews in the Saint or visit their facebook page @HeForSheStAndrews to find out more.</p>
+        </blockquote>
+      </div>
+      <div class="col-sm-4">
+        <img src="womenforwomeninternational_logo.jpg" class="img-fluid" alt="Women for women international">
+        <blockquote>
+          <p><b><span class="pinktext">Women for Women International</span></b> is a solidarity campaign for the davancement of gender equality. It was initiated by the UN. Read a recent article about HeForShe in St Andrews in the Saint or visit
+            their facebook page @HeForSheStAndrews to find out more.</p>
+        </blockquote>
+      </div>
     </div>
 
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-4">
-          <img src="heforshe_logo.jpg" class="img-fluid" alt="HeForShe">
-            <p><b><span class="pinktext">HeForShe</span></b> is a solidarity campaign for the davancement of gender equality. It was initiated by the UN. Read a recent article about HeForShe in St Andrews in the Saint or visit their facebook page @HeForSheStAndrews to find out more.</p>
-        </div>
-        <div class="col-sm-4">
-          <img src="womeninwork_logo.jpg" class="img-fluid" alt="Women in work">
-          <blockquote>
-            <p><b><span class="pinktext">Women in Work</span></b> Read a recent article about HeForShe in St Andrews in the Saint or visit their facebook page @HeForSheStAndrews to find out more.</p>
-          </blockquote>
-        </div>
-        <div class="col-sm-4">
-          <img src="womenforwomeninternational_logo.jpg" class="img-fluid" alt="Women for women international">
-          <blockquote>
-            <p><b><span class="pinktext">Women for Women International</span></b> is a solidarity campaign for the davancement of gender equality. It was initiated by the UN. Read a recent article about HeForShe in St Andrews in the Saint or visit their facebook page @HeForSheStAndrews to find out more.</p>
-          </blockquote>
-        </div>
-      </div>
-
-    <div class="row">
+    <div class="row2">
       <div class="col-sm-4">
         <img src="herchoice_logo.jpg" class="img-fluid" alt="Her Choice">
         <blockquote>
-          <p><b><span class="pinktext">Her Choice</span></b> is a solidarity campaign for the davancement of gender equality. It was initiated by the UN. Read a recent article about HeForShe in St Andrews in the Saint or visit their facebook page @HeForSheStAndrews to find out more.</p>
+          <p><b><span class="pinktext">Her Choice</span></b> is a solidarity campaign for the davancement of gender equality. It was initiated by the UN. Read a recent article about HeForShe in St Andrews in the Saint or visit their facebook page
+            @HeForSheStAndrews to find out more.</p>
         </blockquote>
       </div>
       <div class="col-sm-4">
         <img src="womenincomputerscience_logo.jpg" class="img-fluid" alt="Women in Computer Science">
         <blockquote>
-          <p><b><span class="pinktext">Women in Computer Science</span></b> is a solidarity campaign for the davancement of gender equality. It was initiated by the UN. Read a recent article about HeForShe in St Andrews in the Saint or visit their facebook page @HeForSheStAndrews to find out more.</p>
+          <p><b><span class="pinktext">Women in Computer Science</span></b> is a solidarity campaign for the davancement of gender equality. It was initiated by the UN. Read a recent article about HeForShe in St Andrews in the Saint or visit their
+            facebook page @HeForSheStAndrews to find out more.</p>
         </blockquote>
       </div>
       <div class="col-sm-4">
         <img src="feministsociety_logo.jpg" class="img-fluid" alt="Feminist Society">
         <blockquote>
-          <p><b><span class="pinktext">Feminist Society</span></b> is a solidarity campaign for the davancement of gender equality. It was initiated by the UN. Read a recent article about HeForShe in St Andrews in the Saint or visit their facebook page @HeForSheStAndrews to find out more.</p>
+          <p><b><span class="pinktext">Feminist Society</span></b> is a solidarity campaign for the davancement of gender equality. It was initiated by the UN. Read a recent article about HeForShe in St Andrews in the Saint or visit their facebook
+            page @HeForSheStAndrews to find out more.</p>
         </blockquote>
       </div>
+    </div>
+  </div>
+
+  <div class="container-fluid2">
+    <div class="row">
+      <div class="col-sm-8">
+        <h1 class="contacth"><b>Contact Us!</b></h1>
+        <p class="contactp">Email us at <b><span class="greytext">thefemmefiles@gmail.com</span></b></p>
+        <h1 class="contacth">Subscribe to our newsletter!</h1>
+        <div class="input">
+        <input type="email" placeholder="Your Email">
+        <input type="Submit">
+        </div>
+        <h1 class="contacth">Follow us on:</h1>
+        <div id='social-buttons'>
+          <button class="btn btn-md btn-twitter"><b>Twitter</b></button>
+          <button class="btn btn-md btn-facebook"><b>Facebook</b></button>
+          <button class="btn btn-md btn-pinterest"><b>Pinterest</b></button>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <img class="img-responsive" src='logo.jpeg'>
       </div>
     </div>
 </body>
