--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </div>
 
   <div class='jumbotron'>
-        <h1 class="title1">The<b><span class="pinktext">Femme</span></b> Files</h1>
+        <h1>The <b><span class="pinktext">Femme</span></b> Files</h1>
     </div>
 
   <div>
