--- a/news.html
+++ b/news.html
@@ -9,52 +9,94 @@
 <body>
   <div>
     <header>
-      <ul>
-        <li> <img class='navimage' src="logo.jpeg"></li>
-        <li class='nav'><a href="index.html">Home</a></li>
-        <li class='nav'><a href="news.html">News</a></li>
-        <li class='nav'><a href="#">Get Involved</a></li>
-        <li class='nav'><a href="#">Gallery</a></li>
-        <li class='nav'><a href="#">Contact Us</a></li>
-      </ul>
+      <nav class="navbar navbar-expand-lg">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <!--- <li><a href="#" class="pull-left"><img class="navimage" src="logo.jpeg" style="display: inline-block;"></a></li>-->
+            <!--<li><img class='navimage' src="logo.jpeg"></li>-->
+            <li><a href="#"><b><span class="greytext">Home</span></b></a></li>
+            <li><a href="#"><b><span class="greytext">News</span></b></a></li>
+            <li><a href="#"><b><span class="greytext">Get involved</span></b></a></li>
+            <li><a href="#"><b><span class="greytext">Gallery</span></b></a></li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0 type=" submit">Search</button>
+          </form>
+        </div>
+      </nav>
     </header>
   </div>
-  <div>
-    <h1 class="title">International News</h1>
-    <h2 class="mission">The latest news regarding women's rights and issues around the world. Click the images below for more information!</h2>
+
+  <div class="content">
+    <div>
+      <div class="newsheading">
+        <h1><b>News</b></h1>
+      </div>
+      <div class="headingnews1">
+        <h1 class="title"><b>International News</b></h1>
+        <h2 class="mission">The latest news regarding women's rights and issues around the world. Click the images below for more information!</h2>
+      </div>
       <div class="newsone">
         <a href="https://www.buzzfeed.com/ryanschocket2/jennifer-lawrence-is-facing-backlash-for-her-new-fashion"><img src="diornews.jpeg" alt="Dior" class="images"></a>
-        <h1 class="newsheadlines">Criticism's of Dior's Latest Campaign</h1>
+        <h1 class="newsheadlines"><b>Criticism's of Dior's Latest Campaign</b></h1>
         <h2 class="bodytext">High-end fashion label Dior faces backlash at use of traditional Mexican clothing in newest clothing line, modeled by Jennifer Lawrence</h2>
       </div>
       <div class="newstwo">
         <a href="https://www.buzzfeednews.com/article/mollyhensleyclancy/two-women-in-their-20s-could-be-elected-to-congress-tuesday"><img src="ocasio-cortez.jpeg" alt="Cortez" class="images"></a>
-        <h1 class="newsheadlines">Ocasio-Cortez becomes New York congresswomen in historic election</h1>
+        <h1 class="newsheadlines"><b>Ocasio-Cortez becomes New York congresswomen in historic election</b></h1>
         <h2 class="bodytext">Alexandria Ocasio-Cortez, who just last year was bartending to make ends meet, was elected last week to the House of Representatives</h2>
       </div>
       <div class="newsthree">
-            <a href="https://www.buzzfeed.com/ikrd/teen-record-label-birmingham-muna-ruumi"><img src="ruumi.jpeg" alt="Cortez" class="images"></a>
-            <h1 class="newsheadlines">Muna Ruumi: Britain's youngest record-label mogul</h1>
-            <h2 class="bodytext">19-year old girl from Birmingham, starts her own record label followed the increased popularity of grime and hip-hop in her area</h2>
+        <a href="https://www.buzzfeed.com/ikrd/teen-record-label-birmingham-muna-ruumi"><img src="ruumi.jpeg" alt="Cortez" class="images"></a>
+        <h1 class="newsheadlines"><b>Muna Ruumi: Britain's youngest record-label mogul</b></h1>
+        <h2 class="bodytext">19-year old girl from Birmingham, starts her own record label followed the increased popularity of grime and hip-hop in her area</h2>
       </div>
-  </div>
+    </div>
 
-  <div>
-    <h1 class="title">St. Andrews News</h1>
-    <h2 class="mission">The latest news regarding women's rights and issues, right here in St. Andrews</h2>
+    <div>
+      <div class="headingnews2">
+        <h1 class="title"><b>St. Andrews News</b></h1>
+        <h2 class="mission">The latest news regarding women's rights and issues, right here in St. Andrews</h2>
+      </div>
       <div class="newsone">
         <a href="https://www.facebook.com/events/2220464008198561/"><img src="reclaimthenight.jpeg" alt="Dior" class="images"></a>
-        <h1 class="newsheadlines">Reclaim the Night March</h1>
+        <h1 class="newsheadlines"><b>Reclaim the Night March</b></h1>
         <h2 class="bodytext">Despite inclimate weather, the Reclaim the Night march is set to go off without a hitch</h2>
       </div>
       <div class="newstwo">
         <a href="https://www.facebook.com/events/576501212806781/"><img src="yoga.jpg" alt="Cortez" class="images"></a>
-        <h1 class="newsheadlines">Yoga Society offers stress-relief focused yoga ahead of exams</h1>
+        <h1 class="newsheadlines"><b>Yoga Society offers stress-relief focused yoga ahead of exams</b></h1>
         <h2 class="bodytext">The St. Andrews Yoga Society will be holding an open yoga session, specifically targetted for stress relief, to reduce anxiety before exams. Head to the union on Decemeber 5th!</h2>
       </div>
       <div class="newsthree">
-            <a href="https://news.st-andrews.ac.uk/archive/new-st-andrews-halls-to-be-named-after-female-pioneers/"><img src="newhalls.jpg" alt="Cortez" class="images"></a>
-            <h1 class="newsheadlines">New halls named after famous female alumni</h1>
-            <h2 class="bodytext">19-year old girl from Birmingham, starts her own record label followed the increased popularity of grime and hip-hop in her area</h2>
+        <a href="https://news.st-andrews.ac.uk/archive/new-st-andrews-halls-to-be-named-after-female-pioneers/"><img src="newhalls.jpg" alt="Cortez" class="images"></a>
+        <h1 class="newsheadlines"><b>New halls named after famous female alumni</b></h1>
+        <h2 class="bodytext">19-year old girl from Birmingham, starts her own record label followed the increased popularity of grime and hip-hop in her area</h2>
       </div>
-  </div>
+    </div>
+    </div>
+
+    <div class="container-fluid2">
+      <div class="row">
+        <div class="col-sm-8">
+          <h1 class="contacth"><b>Contact Us!</b></h1>
+          <p class="contactp">Email us at <b><span class="greytext">thefemmefiles@gmail.com</span></b></p>
+          <h1 class="contacth">Subscribe to our newsletter!</h1>
+          <div class="input">
+            <input type="email" placeholder="Your Email">
+            <input type="Submit">
+          </div>
+          <h1 class="contacth">Follow us on:</h1>
+          <div id='social-buttons'>
+            <button class="btn btn-md btn-twitter"><b>Twitter</b></button>
+            <button class="btn btn-md btn-facebook"><b>Facebook</b></button>
+            <button class="btn btn-md btn-pinterest"><b>Pinterest</b></button>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <img class="img-responsive" src='logo.jpeg'>
+        </div>
+      </div>
+    </div>
+</body>
