--- a/news.html
+++ b/news.html
@@ -14,9 +14,9 @@
           <ul class="navbar-nav mr-auto">
             <!--- <li><a href="#" class="pull-left"><img class="navimage" src="logo.jpeg" style="display: inline-block;"></a></li>-->
             <!--<li><img class='navimage' src="logo.jpeg"></li>-->
-            <li><a href="#"><b><span class="greytext">Home</span></b></a></li>
-            <li><a href="#"><b><span class="greytext">News</span></b></a></li>
-            <li><a href="#"><b><span class="greytext">Get involved</span></b></a></li>
+            <li><a href="index.html"><b><span class="greytext">Home</span></b></a></li>
+            <li><a href="news.html"><b><span class="greytext">News</span></b></a></li>
+            <li><a href="Getinvolved.html"><b><span class="greytext">Get involved</span></b></a></li>
             <li><a href="#"><b><span class="greytext">Gallery</span></b></a></li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
