--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
           <ul class="navbar-nav mr-auto">
             <!--- <li><a href="#" class="pull-left"><img class="navimage" src="logo.jpeg" style="display: inline-block;"></a></li>-->
              <!--<li><img class='navimage' src="logo.jpeg"></li>-->
-             <li><a href="#"><b><span class="greytext">Home</span></b></a></li>
-             <li><a href="#"><b><span class="greytext">News</span></b></a></li>
-             <li><a href="#"><b><span class="greytext">Get involved</span></b></a></li>
+             <li><a href="index.html"><b><span class="greytext">Home</span></b></a></li>
+             <li><a href="news.html"><b><span class="greytext">News</span></b></a></li>
+             <li><a href="Getinvolved.html"><b><span class="greytext">Get involved</span></b></a></li>
              <li><a href="#"><b><span class="greytext">Gallery</span></b></a></li>
              </ul>
              <form class="form-inline my-2 my-lg-0">
@@ -60,8 +60,8 @@
     </p>
     <h4 class="polltext"><b>Who should our next week's WoW be?</b></h4>
     <ul>
-      <li class="vote"><button class="btn-md">Michelle Obama</button></li>
-      <li class="vote"><button class="btn-md">Malala Yousafzai</button></li>
+      <li class="vote"><button class="btn-md btn-vote">Michelle Obama</button></li>
+      <li class="vote"><button class="btn-md btn-vote">Malala Yousafzai</button></li>
     </ul>
   </div>
 
@@ -89,7 +89,7 @@
   </div>
 
   <script>
-$("button").on("click"), function() {
+$("btn-vote").on("click"), function() {
   alert("Thank you for voting! Currently 45% have voted for Michelle Obama and 55% have voted for Malala Yousafzai.")
 });
     </script>
